@@ -127,10 +127,10 @@ typedef enum _STORAGE_QUERY_TYPE
 STORAGE_QUERY_TYPE, *PSTORAGE_QUERY_TYPE;
 
 #if defined( _MSC_VER ) || defined( __BORLANDC__ )
-#define HAVE_STORAGE_BUS_TYPE
+#define HAVE_WINIOCTL_H_STORAGE_BUS_TYPE
 #endif
 
-#if !defined( HAVE_STORAGE_BUS_TYPE )
+#if !defined( HAVE_WINIOCTL_H_STORAGE_BUS_TYPE )
 
 typedef enum _STORAGE_BUS_TYPE
 {
@@ -150,7 +150,7 @@ typedef enum _STORAGE_BUS_TYPE
 }
 STORAGE_BUS_TYPE, *PSTORAGE_BUS_TYPE;
 
-#endif /* !defined( HAVE_STORAGE_BUS_TYPE ) */
+#endif /* !defined( HAVE_WINIOCTL_H_STORAGE_BUS_TYPE ) */
 
 typedef struct _STORAGE_PROPERTY_QUERY
 {
