@@ -36,6 +36,9 @@ Deployment
 Test:
 * add autoconf/make test suite
 
+20110731
+* renamed HAVE_STORAGE_BUS_TYPE to HAVE_WINIOCTL_H_STORAGE_BUS_TYPE
+
 20110727
 * updated common
 * worked on optical dics track functions
